# biobank-plink-assoc

./: .gitignore  CMakeLists.txt  README.md  dataflow_tikz_chart.tex  tikz_chart_amend.tex.md
convert/: genotype_convert.cpp  genotype_convert.h  phenotype_convert.cpp  phenotype_convert.h
convert-assoc-qt/: convert_assoc_en_US.ts  exception_dialog.cpp  exception_dialog.h  exception_dialog.ui  genotype_file_select.cpp  genotype_file_select.h  genotype_main.h  genotype_map_select.cpp  genotype_map_select.h  info_dialog.h  info_dialog.ui  main.cpp  phenotype_file_select.cpp  phenotype_file_select.h  phenotype_select.h  plink_monitor.cpp  plink_monitor.h
convert-assoc-qt/convert_assoc/: CMakeLists.txt  convert_assoc_en_US.ts  exception_dialog.ui  genotype_file_select.cpp  genotype_file_select.h  genotype_file_select.ui  genotype_main.cpp  genotype_main.h  genotype_main.ui  genotype_map_select.cpp  genotype_map_select.h  genotype_map_select.ui  info_dialog.cpp  info_dialog.ui  main.cpp  phenotype_file_select.cpp  phenotype_file_select.h  phenotype_file_select.ui  phenotype_select.cpp  phenotype_select.h  phenotype_select.ui  plink_monitor.cpp  plink_monitor.ui
plink_1.9/: CMakeLists.txt  SFMT.h  bgen_to_gen.c  bgzf.c  dbl2txt.c  dose2plink.c  hfile.c  hfile_internal.h  plink.c  plink_common.h  plink_glm.c  prettify.c  zlib.cmake
plink_1.9/vsproj/: CMakeCache.txt
sample_input/: sample_genotype.csv  sample_genotype_map.csv  sample_phenotype.csv
test-vsproj/: Genotype_line_parse_input.txt  sample_phenotype.csv  test-vsproj.sln  test-vsproj.vcxproj  test.cpp
zlib-1.2.11/: CMakeLists.txt
